--- a/lib/review/retrovert/sty/ird.sty
+++ b/lib/review/retrovert/sty/ird.sty
@@ -71,25 +71,24 @@
 % \usepackage[hiragino-pron]{pxchfon}
 \renewcommand{\headfont}{\gtfamily\sffamily}
 
-\hyphenpenalty=10000\relax
+% \hyphenpenalty=10000\relax
 
 \renewcommand{\section}{%
   \if@slide\clearpage\fi
   \@startsection{section}{1}{\z@}%
-  {1.2\Cvs \@plus.3\Cdp \@minus1.2\Cdp}% 前アキ
-  {.4\Cvs \@plus.3\Cdp}% 後アキ
+  {1.3\Cvs \@plus.5\Cdp \@minus1.2\Cdp}% 前アキ
+  {.5\Cvs \@plus.3\Cdp}% 後アキ
   {\normalfont\large\bfseries\headfont\raggedright}}
 
 \renewcommand{\subsection}{\@startsection{subsection}{2}{\z@}%
   {.8\Cvs \@plus.5\Cdp \@minus1.2\Cdp}% 前アキ
-  {.3\Cvs \@plus.8\Cdp}% 後アキ
+  {.5\Cvs \@plus.3\Cdp}% 後アキ
   {\normalfont\normalsize\headfont}}
 
 \renewcommand{\subsubsection}{\@startsection{subsubsection}{3}{\z@}%
-  {.8\Cvs \@plus.5\Cdp \@minus1.2\Cdp}%
-  {\if@slide .2\Cvs \@plus.6\Cdp \else \z@ \fi}%
-  {\normalfont\normalsize}%
-  }
+  {.6\Cvs \@plus.5\Cdp \@minus1.2\Cdp}%
+  {\if@slide .2\Cvs \@plus.6\Cdp \else .2\Cvs \@plus.3\Cdp \fi}%
+  {\normalfont\normalsize}}
 
 \def\@startsection#1#2#3#4#5#6{%
   \if@noskipsec \leavevmode \fi
@@ -119,60 +118,65 @@
     {\@ssect{#3}{#4}{#5}{#6}}%
     {\@dblarg{\@sect{#1}{#2}{#3}{#4}{#5}{#6}}}}
 
-\def\@ssect#1#2#3#4#5{%
-  \@tempskipa #3\relax
-  \ifdim \@tempskipa<\z@
-    \def\@svsechd{#4{\hskip #1\relax #5}}%
-  \else
-    \begingroup
-      #4{%
-        \@hangfrom{\hskip #1}%
-          \interlinepenalty \@M #5\@@par}%
-    \endgroup
-    \nopagebreak[4]%
-  \fi
-  \@xsect{#3}}
+% \def\@ssect#1#2#3#4#5{%
+%   \@tempskipa #3\relax
+%   \ifdim \@tempskipa<\z@
+%     \def\@svsechd{#4{\hskip #1\relax #5}}%
+%   \else
+%     \begingroup
+%       #4{%
+%         \@hangfrom{\hskip #1}%
+%           \interlinepenalty \@M #5\@@par}%
+%     \endgroup
+%     \nopagebreak[4]%
+%   \fi
+%   \@xsect{#3}}
 
-\def\@xsect#1{%
-  \@tempskipa #1\relax
-  \ifdim \@tempskipa<\z@
-    \@nobreakfalse
-    \global\@noskipsectrue
-    \everypar{%
-      \if@noskipsec
-        \global\@noskipsecfalse
-       {\setbox\z@\lastbox}%
-        \clubpenalty\@M
-        \begingroup \@svsechd \endgroup
-        \unskip
-        \@tempskipa #1\relax
-        \hskip -\@tempskipa
-      \else
-        \clubpenalty \@clubpenalty
-        \everypar{\everyparhook}%
-      \fi\everyparhook}%
-  \else
-    \nopagebreak[4]
-    \par \nobreak
-    \vskip \@tempskipa
-    \@afterheading
-  \fi
-  \if@slide
-    {\vskip\if@twocolumn-5\jsc@mpt\else-6\jsc@mpt\fi
-     \maybeblue\hrule height0\jsc@mpt depth1\jsc@mpt
-     \vskip\if@twocolumn 4\jsc@mpt\else 7\jsc@mpt\fi\relax}%
-  \fi
-  \par  % 2000-12-18
-  \ignorespaces}
+% \def\@xsect#1{%
+%   \@tempskipa #1\relax
+%   \ifdim \@tempskipa<\z@
+%     \@nobreakfalse
+%     \global\@noskipsectrue
+%     \everypar{%
+%       \if@noskipsec
+%         \global\@noskipsecfalse
+%        {\setbox\z@\lastbox}%
+%         \clubpenalty\@M
+%         \begingroup \@svsechd \endgroup
+%         \unskip
+%         \@tempskipa #1\relax
+%         \hskip -\@tempskipa
+%       \else
+%         \clubpenalty \@clubpenalty
+%         \everypar{\everyparhook}%
+%       \fi\everyparhook}%
+%   \else
+%     \nopagebreak[4]
+%     \par \nobreak
+%     \vskip \@tempskipa
+%     \@afterheading
+%   \fi
+%   \if@slide
+%     {\vskip\if@twocolumn-5\jsc@mpt\else-6\jsc@mpt\fi
+%      \maybeblue\hrule height0\jsc@mpt depth1\jsc@mpt
+%      \vskip\if@twocolumn 4\jsc@mpt\else 7\jsc@mpt\fi\relax}%
+%   \fi
+%   \par  % 2000-12-18
+%   \ignorespaces}
 
 %
 % コラムの変更
 %
 
+\def\ifempty#1{\def\temp{#1} \ifx\temp\empty }
+
 \renewenvironment{reviewcolumn}[1][]{%
-     \begin{framed}
-     \reviewcolumnhead{}{#1}
-     \footnotesize
+    \begin{framed}
+    \ifempty{#1}%
+    \else%
+      \reviewcolumnhead{}{#1}%
+    \fi%
+    \footnotesize
   }{%
      \end{framed}
   % \vspace{-2pt}
@@ -191,7 +195,7 @@
     \begin{flushleft}}{%
     \end{flushleft}
   \end{figure}
-  \vspace*{-9.5pt} % not リュウミン
+  \vspace{-5.5pt}
   }
 
 % \renewcommand\reviewimagecaption[1]{%
@@ -200,16 +204,15 @@
 
 \renewcommand\reviewimagecaption[1]{%
   \captionsetup{format=hang,font=footnotesize,labelfont=bf,margin=0pt,justification=raggedright,singlelinecheck=off,name=図}
-  \vspace*{-2mm} \caption{ \bfseries\footnotesize{#1} } \vspace{-1.5mm}}
+  \vspace{-1mm} \caption{ \bfseries\footnotesize{#1} } \vspace{-1.5mm}}
 
-% not リュウミン
-% フォントのに対して幅が広くなりすぎて図が大きくなりすぎるので幅を狭める
-\def\irdmaxwidth{0.965\textwidth}
-\usepackage[export]{adjustbox}
-\DeclareRobustCommand{\reviewincludegraphics}[2][]{%
-  \adjustbox{max width=\irdmaxwidth}{%
-  \includegraphics[#1]{#2}}%
-  }
+% % フォントのに対して調整
+% \def\irdmaxwidth{0.99\textwidth}
+% \usepackage[export]{adjustbox}
+% \DeclareRobustCommand{\reviewincludegraphics}[2][]{%
+%   \adjustbox{max width=\irdmaxwidth}{%
+%   \includegraphics[#1]{#2}}%
+%   }
 
 %
 % 表
@@ -226,11 +229,24 @@
 % 箇条書き
 %
 
-% 要素の間隔を 0 にする
+% \usepackage{enumitem}
+% \setlist[enumerate]{topsep=0pt,parsep=1pt}
+% \setlist[itemize]{topsep=0pt,parsep=1pt}
 
-\usepackage{enumitem}
-\setlist[enumerate]{topsep=0pt,parsep=0pt,partopsep=1pt}
-\setlist[itemize]{topsep=0pt,parsep=0pt,partopsep=1pt}
+\newenvironment{reviewitemize}{%
+  \ifnum\@listdepth=0%
+    \def\@listi{%
+      \@listI%
+      % \topsep 0.1\baselineskip%     % 上下の余白を減らす（original: 0.5\baselineskip）
+      % \topsep \z@%     % 上下の余白を減らす（original: 0.5\baselineskip）
+      \topsep -0.25\baselineskip%     % 上下の余白を減らす（original: 0.5\baselineskip）
+    }%
+  \fi%
+  \begin{itemize}%
+  \setlength{\parskip}{-0.6pt}% 要素の間隔を詰める
+}{%
+  \end{itemize}%
+}
 
 %
 % リスト
@@ -267,17 +283,17 @@
   \ifdefined\reviewlistxkanjiskip%
     \xkanjiskip=\reviewlistxkanjiskip%
   \fi%
-  \vspace*{-2zw \@plus2.7\Cdp}% 枠の前の余白削除
+  \vspace*{-2.5zw \@plus.3\Cdp}% 枠の前の余白削除
   \begin{framed}%
-    \vspace*{-1zw}% 前後の余白削除
+    % \interlinepenalty=10000%
+    \vspace*{-0.8zw}% 前後の余白削除
     % \setlength{\baselineskip}{1.3zw}%
-    \setlength{\baselineskip}{1.8zw}%
+    \setlength{\baselineskip}{2zw}%
     \begin{alltt}}{%
     \end{alltt}%
-    \vspace*{-1zw}% 前後の余白削除
+    \vspace*{-0.8zw}% 前後の余白削除
   \end{framed}%
-  % この値だといい感じになる
-  \vspace*{-0.28mm}% 枠の後ろの余白の調整
+  \vspace*{0.3mm}% 枠の後ろの余白の調整
   }
 
 % \renewenvironment{reviewcmd}{%
